--- a/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
+++ b/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
@@ -44,7 +44,9 @@ You should leverage API Versioning when working with REST APIs to avoid breaking
 - `api-version=1.2-preview`
 - `api-version=2.0-preview.1`
 
-API Versioning Reference is located [here](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1#api-and-tfs-version-mapping).
+API Versioning Reference is located [here](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1#api-and-tfs-version-mapping). The API Version is key to the subsequent calls below so be sure to make a point to review the reference regularly. 
+
+**<u>NOTE</u>**: In the PowerShell examples provided below, I'll be providing **<u>a parameter approach for supplying the API version which is helpful to quickly update to a newer version</u>**.
 
 #### Request Header and Body
 
@@ -114,52 +116,75 @@ Reference:
 
 [How email recipients of notifications are determined](https://docs.microsoft.com/en-us/azure/devops/notifications/concepts-email-recipients?view=azure-devops)
 
+## Build Environments
+### Scenario: Securing Current Deployments
 
-
-## Pipelines
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.Sources.PNG" style="zoom:50%;" />
+In this scenario, we will attempt to secure our Power Platform environment using security checks and policies. With build environments we can configure conditions such as only releasing during specific time frames, approvals from stakeholders, azure function responses or even requiring templates and tasks. In the below example, we will require three conditions to be met before releasing to an environment: Approvals from team members, required extends templates and artifact policy enforcement.
 
 ### Environments
 
-[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in Azure DevOps allow for targeted deployment of artifacts to a collection of resources. In the case of the Power Platform, this can be thought of a release to an Power Platform environment. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions. Using the [Azure DevOps REST API for Environments](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0) we can evaluate both...mostly.
+[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in Azure DevOps allow for **<u>targeted deployment of artifacts to a collection of resources</u>**. In the case of the **Power Platform**, this can be thought of **<u>a release to an Power Platform environment</u>**. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions. Using the [Azure DevOps REST API for Environments](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0) we can evaluate both...mostly.
 
 [https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment records/list?view=azure-devops-rest-6.0)
 
-#### Deployment History and Security Checks
+### Environment Security Checks
 
-Environments allow DevOps administrators the ability to review and manage deployments. With this control also comes auditing of previous deployments allowing insight into trends and potential vulnerabilities. Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (orchestrations and divisions) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (sequential tasks) details.
 
-<insert execution record image>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
+#### Environment Deployment History and 
+
+Environments allow DevOps administrators the ability to review and manage each deployment. With this control also comes auditing of previous deployments allowing insight into trends and potential vulnerabilities. 
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.RequiredTemplate.GitHubSourced.PNG" style="zoom:50%;" />
+
+Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (orchestrations and divisions) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (sequential tasks) details. Below is an example of a PowerShell script to request deployment records on a specific environment.
+
+```
+$environmentDeploymentRecordsUrl = "$($devopsBaseUrl)$($projectId)/_apis/distributedtask/environments/$($envirommentId)/environmentdeploymentrecords?$($apiVersion)"
+$environmentDeploymentRecords = Invoke-RestMethod -Uri $environmentDeploymentRecordsUrl -Method Get -ContentType "application/json" -Headers $header
+```
+
+
 
 Each deployment, that meets security checks, will be included within the execution record REST API list. If the deployment is not found, most likely it is awaiting or failed a specific conditional check. As of this writing, the ability to read pending deployments awaiting checks such as approvals is not straight forward. That said, using Web Hooks, as discussed in the Web Hooks section of the article "", we can see acknowledgement of a pending approval. In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the REST API.
 
-### Builds
-
-Build Pipeline has capabilities to review analytics from an API. This allows us to request for each build not only the logs and timings but how the build compares to previous builds. From this we can conclude if our builds are trending in the right direction and if not, what can we do to course correct.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
 
+## Build Pipelines
+
+Build Pipeline has capabilities to review analytics from an API. This allows us to request for each build not only the logs and timings but how the build compares to previous builds. 
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.Sources.PNG" style="zoom:50%;" />
+
+From this we can conclude if our builds are trending in the right direction and if not, what can we do to course correct.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuild.Output.PNG"  />
+
+In the above example, we can see that the build number, the status and result, the start and finish times are returned. Also included is information about the code changes and work items as well as logs that can be drilled into for each task.
 
 #### Build Changes and Work Items
 
-ddd
+Each build mostly likely is associated with changes made by a team of developers or support engineers. During the typical DevOps process, branches are created, code is crafted and  merged with Pull Requests. Below is an example of a sample commit and pull request triggering a build.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildChanges.DevOpsGUI.PNG"  />
+
+Within the REST API, we can review the location and identifiers to help monitor the code changes in each build. 
 
 PowerShell Example:
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildChanges.PowerShell.PNG" style="zoom:50%;" />
 
+This is essential to helping automate release notes that include references to each commit and approval. Post deployment, analysts can review and determine gaps in the current process. **<u>This feedback loop is important to internal teams to continuous improve and optimize the code delivery process.</u>**
+
 #### Build Work Items
 
-ddd
+Each build also brings along information about each work item associated to it. This can include user stories and bugs associated within a Release Record for each release. **<u>By using Web Hooks and the REST API, we can review and provide automated release records to external stakeholders such as users of our platform.</u>**
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
 ### Artifacts
+
+Each build
 
 [https://docs.microsoft.com/en-us/rest/api/azure/devops/build/artifacts/get%20file?view=azure-devops-rest-6.0](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/artifacts/get file?view=azure-devops-rest-6.0)
 
