updated ps images

--- a/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
+++ b/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
@@ -114,7 +114,7 @@ $environments = Invoke-RestMethod -Uri $environmentsUrl -Method Get -ContentType
 
 The output for each environment includes the identifier, name, description and creation properties.
 
-<insert GetENvironment PS>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetEnvironemnt.PowerShell.PNG"  />
 
 #### Environment Deployment History and 
 
@@ -129,11 +129,11 @@ $environmentDeploymentRecords = Invoke-RestMethod -Uri $environmentDeploymentRec
 
 For each deployment record we can find out a wealth of information. Build definitions, plans, stages, jobs are all shown. The start and finish timings and statuses are also shown, helping engineers determine where things may have gone wrong.
 
-<insert deployment history powerhsell>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetEnvironmentDeploymentRecord.PowerShell.PNG"  />
 
-Here is an example showing usage of the Environment and Environment Deployment Record REST API calls. Also included are calls to the Build REST API detailed below.
+Here is an example showing usage of the Environment and Environment Deployment Record REST API calls. Also included are calls to the Build REST API calls detailed below.
 
-<insert gif>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/REST API and Build Environment Deployment.gif"  />
 
 #### Quick Note on Security Checks
 
