--- a/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
+++ b/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
@@ -4,11 +4,11 @@
 
 [DevOps](https://azure.microsoft.com/en-us/overview/what-is-devops/) has become more and more ingrained into our **Power Platform** project lifecycle. Work item tracking and feedback tools for teamwork. Continuous integration and delivery for code changes and solution deployments. Automated testing for assurance, compliance and governance considerations. Microsoft's tool, **[Azure DevOps](https://azure.microsoft.com/en-us/overview/what-is-devops/#culture)** provides native capabilities to plan, work, collaborate and deliver. Each step along the way in our [**Power Platform DevOps** journey](https://docs.microsoft.com/en-us/power-platform/alm/devops-build-tools) can be tracked and monitored which will be the primary objective of this article.
 
-This article will focus on reviewing the current setup of our Azure DevOps implementation using APIs. We will work with environments and builds that can help to control and coordinate. From there, we will deep dive into build runs to capture work items and change information to help with annotation. We will explore build timelines and logs, helping us determine where things may have gone wrong or could be tuned. Finally, I'll provide references to useful REST API calls and PowerShell samples.
+This article will focus on reviewing the current setup of our **Azure DevOps** implementation using APIs. We will **<u>work with environments and builds that can help to control and coordinate</u>**. From there, we will deep dive into <u>**build runs to capture work items and change information to help with annotation**</u>. We will explore **build timelines and logs, helping us determine where things may have gone wrong or could be tuned**. **<u>Finally, I'll provide references to useful REST API calls and PowerShell samples.</u>**
 
 ## Sources
 
-Sources of Azure DevOps events that impact our delivery can come from virtually any area of the platform including work items, pipelines, source control, testing and artifact delivery. For each one of these events, such as completed work items, we can setup visualizations such as charts based on defined queries. Service hooks and notification subscriptions can be configured to allow real time reporting of events to external parties and systems allowing for us to stay in a state of continuous communication and collaboration.
+Sources of **Azure DevOps** events that impact our delivery can come from virtually **<u>any area of the platform including work items, pipelines, source control, testing and artifact delivery</u>**. As mentioned, this article will focus on using the **Azure DevOps REST API** to expose these sources externally.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
@@ -16,13 +16,13 @@ Sources of Azure DevOps events that impact our delivery can come from virtually 
 
 ### Choosing between the SDK and invoking the endpoint directly
 
-To connect to the Azure DevOps REST API an administrator can use [HTTP requests](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1) directly or the [client library (SDK)](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1#client-libraries). The SDK will help simplify your code and works across multiple frameworks include .NET, Node.js and Python. A [reference to the Azure DevOps Dot Net Sample code](https://github.com/microsoft/azure-devops-dotnet-samples) can be found on GitHub.
+To connect to the **Azure DevOps REST API** an administrator can use [HTTP requests](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1) directly or the [client library (SDK)](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1#client-libraries). The SDK will **<u>help simplify your code and works across multiple frameworks include .NET, Node.js and Python</u>**. A [reference to the Azure DevOps Dot Net Sample code](https://github.com/microsoft/azure-devops-dotnet-samples) can be found on **GitHub**.
 
-If you choose to not take on the dependency of the SDK the REST API can still be used and invoked. The decision here is how you plan to utilize your solution. If you are working within an Azure Function for instance, consider using the SDK. For workloads, such as Power Automate or PowerShell, I would recommend the REST API.
+If you choose to not take on the dependency of the SDK the REST API can still be used and invoked. The decision here is how you plan to utilize your solution. If you are working within an **Azure Function** for instance, **<u>consider using the SDK</u>**. For workloads, such as **<u>Power Automate or PowerShell, I would recommend the REST API</u>**.
 
 ### Authenticating with a Personal Access Token or SSH
 
-Personal Access Token are alternative passwords that allow DevOps administrators to issue temporary access to trusted applications that wish to work with the REST API. To setup a PAT, please review [this article](https://docs.microsoft.com/en-us/azure/devops/organizations/accounts/use-personal-access-tokens-to-authenticate?view=azure-devops&tabs=preview-page).
+**Personal Access Tokens** are alternative passwords that allow **Azure DevOps** administrators to issue temporary access to trusted applications that wish to work with the REST API. To setup a PAT, please review [this article](https://docs.microsoft.com/en-us/azure/devops/organizations/accounts/use-personal-access-tokens-to-authenticate?view=azure-devops&tabs=preview-page).
 
 For a detailed description of how to choose the right authentication mechanism, please go [here](https://docs.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/authentication-guidance?view=azure-devops). If you are working with a Linux container or environment continue using the SSH Keys.
 
@@ -34,7 +34,7 @@ For a detailed description of how to choose the right authentication mechanism, 
 VERB https://dev.azure.com/{organization}/_apis[/{area}]/{resource}?api-version={version}
 ```
 
-You should leverage API versioning when working with REST APIs to avoid breaking changes. Azure DevOps REST API offers backwards compatibility with this approach. The API versioning reference is located [here](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1#api-and-tfs-version-mapping). Its key to the subsequent calls below so be sure to make a point to review the reference regularly. 
+You should leverage API versioning when working with REST APIs to avoid breaking changes. **Azure DevOps REST API** offers backwards compatibility with this approach. The API versioning reference is located [here](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1#api-and-tfs-version-mapping). Its key to the subsequent calls below so be sure to make a point to review the reference regularly. 
 
 **<u>NOTE</u>**: In the PowerShell examples provided below, I'll be providing **<u>a parameter approach for supplying the API version which is helpful to quickly update to a newer version</u>**.
 
@@ -74,38 +74,14 @@ Response:
 
 ### Common Operations
 
-The Azure DevOps APIs and SDK provide the ability many different operations to retrieve information from project and user membership, work items, source control, automation, testing and governance. Common operations of interest for monitoring include identifying statuses and metrics of builds, capturing logs from pipelines and tasks and auditing of user membership and policies. 
-
-When creating the subscription, there are a couple of things to keep in mind. First only project administrators will have access to edit and view subscriptions by default. This can be adjusted to grant privileges  to other users. Also, specific actions may be limited depending on which event type is chosen.[Create a service hooks subscription](https://docs.microsoft.com/en-us/azure/devops/service-hooks/create-subscription?view=azure-devops) programmatically.
-
-#### DevOps Subscription REST API
-
-Common operations performed with the REST API include configuring a subscription and getting list of publishers. The [Replace Subscription](https://docs.microsoft.com/en-us/rest/api/azure/devops/hooks/subscriptions/replace%20subscription?view=azure-devops-rest-5.1) is handy for updating the subscription for example of a WebHook service hook allowing to programmatically reconfigure the url to a local service for testing (e.g. [ngrok](https://ngrok.com/product)).
-
-
-
-Create https://docs.microsoft.com/en-us/rest/api/azure/devops/hooks/notifications/create?view=azure-devops-rest-5.1
-
-
-
-#### DevOps REST API
-
-The Azure DevOps REST API provides the ability to configure [notifications](https://docs.microsoft.com/en-us/rest/api/azure/devops/notification/?view=azure-devops-rest-5.1) and [subscriptions](https://docs.microsoft.com/en-us/rest/api/azure/devops/notification/subscriptions?view=azure-devops-rest-5.1) and review [diagnostics logs](https://docs.microsoft.com/en-us/rest/api/azure/devops/notification/diagnostic%20logs/list?view=azure-devops-rest-5.1). Diagnostic logs are useful to troubleshoot what notifications were sent and if there were issues with the delivery.
-
-Reference:
-
-[About notifications](https://docs.microsoft.com/en-us/azure/devops/notifications/about-notifications?view=azure-devops)
-
-[How email recipients of notifications are determined](https://docs.microsoft.com/en-us/azure/devops/notifications/concepts-email-recipients?view=azure-devops)
+The **Azure DevOps APIs** and SDK provide many different operations from project and user membership, to work items, source control, automation, testing and governance. Common operations of interest for monitoring include identifying the status of builds and deployments and capturing logs from pipelines and tasks which will be detailed below. 
 
 ## Build Environments
 ### Environments
 
-[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in Azure DevOps allow for **<u>targeted deployment of artifacts to a collection of resources</u>**. In the case of the **Power Platform**, this can be thought of **<u>a release to an Power Platform environment</u>**. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions. Using the [Azure DevOps REST API for Environments](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0) we can evaluate both...mostly.
+**[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops)** in **Azure DevOps** allow for **<u>targeted deployment of artifacts to a collection of resources</u>**. In the case of the **Power Platform**, this can be thought of **<u>a release to an Power Platform environment</u>**. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. **<u>Two of the main advantages of environments are deployment history and security and permissions</u>**. Using the **[Azure DevOps REST API for Environments](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0)** we can evaluate both...*mostly*.
 
-[https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment records/list?view=azure-devops-rest-6.0)
-
-Using the following PowerShell script we can extract information regarding an environment.
+Using the following **PowerShell** script we can extract information regarding an environment.
 
 ```
 $environmentsUrl = "$($devopsBaseUrl)$($projectId)/_apis/distributedtask/environments?name=$($environmentNameEncoded)&$($apiVersion)"
@@ -118,42 +94,44 @@ The output for each environment includes the identifier, name, description and c
 
 #### Environment Deployment History and 
 
-Environments allow DevOps administrators the ability to review and manage each deployment. With this control also comes auditing of previous deployments allowing insight into trends and potential vulnerabilities. 
+**Environments** allow **Azure DevOps** administrators the ability to review and manage each deployment. With this control also comes auditing of previous deployments allowing insight into trends and potential vulnerabilities. 
 
-Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (orchestrations and divisions) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (sequential tasks) details. Below is an example of a PowerShell script to request deployment records on a specific environment.
+Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (*orchestrations and divisions of labor) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (*sequential tasks*) details. Below is an example of a **PowerShell** script to request deployment records on a specific environment using the **[Environment Deployment Records REST API]()**.
 
 ```
 $environmentDeploymentRecordsUrl = "$($devopsBaseUrl)$($projectId)/_apis/distributedtask/environments/$($envirommentId)/environmentdeploymentrecords?$($apiVersion)"
 $environmentDeploymentRecords = Invoke-RestMethod -Uri $environmentDeploymentRecordsUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
-For each deployment record we can find out a wealth of information. Build definitions, plans, stages, jobs are all shown. The start and finish timings and statuses are also shown, helping engineers determine where things may have gone wrong.
+For each deployment record we can find out a wealth of information. **<u>Build definitions, plans, stages, jobs are all shown</u>**. The **start and finish timings and statuses** are also shown, helping engineers determine where things may have gone wrong.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetEnvironmentDeploymentRecord.PowerShell.PNG"  />
 
-Here is an example showing usage of the Environment and Environment Deployment Record REST API calls. Also included are calls to the Build REST API calls detailed below.
+Here is an **example showing usage of the Environment and [Environment Deployment Record REST API](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) calls**. Also included are calls to the **Build REST API calls detailed below**.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/REST API and Build Environment Deployment.gif"  />
 
 #### Quick Note on Security Checks
 
-Each deployment, that meets security checks, will be included within the execution record REST API list. If the deployment is not found, most likely it is awaiting or failed a specific conditional check. As of this writing, the ability to read pending deployments awaiting checks such as approvals is not straight forward. That said, using Web Hooks, as discussed in the Web Hooks section of the article "", we can see acknowledgement of a pending approval. 
+Each deployment, that meets security checks, will be included within the **[Execution Record REST API](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord)** result list. If the deployment is not found, most likely it is awaiting or failed a specific conditional check. As of this writing, the ability to read pending deployments awaiting checks such as approvals is not straight forward. 
+
+That said, using **Web Hooks**, as discussed in the Web Hooks section of the article "", we can see acknowledgement of a pending approval. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.ApprovalCheck.WebHook.PNG" style="zoom:50%;" />
 
-In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the REST API.
+In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the **Azure DevOps REST API**.
 
 ## Build Pipelines
 
-As we continue the journey within the Azure DevOps service towards continuous integration we will begin using Azure DevOps Build Pipelines more and more. Pipelines allow tight control and visibility into pretty much all aspects of the service. This includes work item and code changes that resulted in integration and deployment. 
+As we continue the journey within the **Azure DevOps** service towards continuous integration we will begin using **Azure DevOps Build Pipelines** more and more. Pipelines allow tight control and visibility into pretty much all aspects of the service. This includes work item and code changes that resulted in integration and deployment. 
 
-Each build can be drilled into using the Azure DevOps REST API to find out about all our builds. This allows us to request for each build, not only the logs and timings, but how the build compares to previous builds. From this we can conclude if our builds are trending in the right direction and if not, what can we do to course correct.
+Each build can be drilled into using the **Azure DevOps REST API** to find out about all our builds. This allows us to request for each build, not only the logs and timings, but how the build compares to previous builds. From this we can conclude if our builds are trending in the right direction and if not, what can we do to course correct.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.Sources.PNG" style="zoom:50%;" />
 
 
 
-Using the following PowerShell command, we can review the status of any particular build of interest. For the below example, I had previously scanned the [**Build Definition** REST API](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/definitions/get?view=azure-devops-rest-6.1) for builds.
+Using the following **PowerShell** command, we can review the status of any particular build of interest. For the below example, I had previously scanned the [**Build Definition** REST API](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/definitions/get?view=azure-devops-rest-6.1) for builds.
 
 ```
 $buildUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)?api-version=5.1-preview.2";
@@ -164,22 +142,22 @@ Here is the output:
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuild.Output.PNG"  />
 
-In the above example, we can see that the build number, the status and result, the start and finish times are returned. Also included is information about the code changes and work items as well as logs that can be drilled into for each task.
+In the above example, we can see that **<u>the build number, the status and result, the start and finish times are returned</u>**. Also included is **information about the code changes and work items as well as logs** that can be drilled into for each task.
 
 #### Build Changes and Work Items
 
-Each build mostly likely is associated with changes made by a team of developers or support engineers. During the typical DevOps process, branches are created, code is crafted and  merged with Pull Requests. Below is an example of a sample commit and pull request triggering a build.
+Each build mostly likely is associated with changes made by a team of developers or support engineers. **<u>During the typical DevOps process, branches are created, code is crafted and merged with Pull Requests</u>**. Below is an example of a sample commit and pull request triggering a build.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildChanges.DevOpsGUI.PNG"  />
 
-Within the REST API, we can review the location and identifiers to help monitor the code changes in each build. 
+With the **Azure DevOps REST API**, we can review the location and identifiers to help monitor the code changes in each build. 
 
 ```
 $buildChangesUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/changes?api-version=5.1-preview.2";
 $buildChanges = Invoke-RestMethod -Uri $buildChangesUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
-PowerShell example output:
+**PowerShell** example output:
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildChanges.PowerShell.PNG" style="zoom:50%;" />
 
@@ -189,39 +167,33 @@ This is essential to helping automate release notes that include references to e
 
 Each build also brings along information about each work item associated to it. This can include user stories and bugs associated within a Release Record for each release. **<u>By using Web Hooks and the REST API, we can review and provide automated release records to external stakeholders such as users of our platform.</u>**
 
-Here is a sample PowerShell script requesting associated work item referenced in a build run.
+Here is a sample **PowerShell** script requesting associated work item referenced in a build run.
 
 ```
 $buildWorkItemsUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/workitems?api-version=5.1-preview.2";
 $buildWorkItems = Invoke-RestMethod -Uri $buildWorkItemsUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
-
 ### Artifacts
 
-Each build can contain artifacts that can be retained and used by other builds, included in documentation or packaged as part of a release.
+Each build can contain artifacts that can be retained and used by other builds, included in documentation or packaged as part of a release using **[the Artifacts REST API call]()**. 
 
-[https://docs.microsoft.com/en-us/rest/api/azure/devops/build/artifacts/get%20file?view=azure-devops-rest-6.0](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/artifacts/get file?view=azure-devops-rest-6.0)
-
-Here is sample PowerShell script showing how to request the published artifacts from a build run.
+Here is sample **PowerShell** script showing how to request the published artifacts from a build run.
 
 ```
 $buildArtifactsUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/artifacts?api-version=5.1-preview.2";
 $buildArtifacts = Invoke-RestMethod -Uri $buildArtifactsUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
-Here's the output in PowerShell.
+Here's the output in **PowerShell**. Reference the "***downloadUrl***" to extract and store the published artifacts to external services such as **Azure Blob Storage**. 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildArtifacts.PowerShell.PNG" style="zoom:50%;" />
 
 ### Logs
 
-Gathering build logs are important to allow administrators to track the status, the timings and the actions performed by a build. Within each build, logs are collected for every action, which can be extracted using the getbuildlog REST API command. 
+Gathering build logs are important, **<u>allowing administrators to track the status, the timings and the actions performed by a build</u>**. Within each build, logs are collected for every action, which can be extracted using the "***logs.url***" property within the [**Build REST API command**](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/Builds/Get?view=azure-devops-rest-5.1). Using the [**Get Build Log REST API**](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20log?view=azure-devops-rest-5.1) we can expand each and review or store in another log store such as **Azure Application Insights**.
 
-https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20log?view=azure-devops-rest-5.1
-
-Here is a sample PowerShell script that loops through each log URL in a build and prints the content.
+Here is a sample **PowerShell** script that loops through each log URL in a build and prints the content.
 
 ```
 $buildTaskLogs = Invoke-RestMethod -Uri $build.logs.url -Method Get -ContentType "application/json" -Headers $header
@@ -232,11 +204,11 @@ $buildTaskLogs.value | ForEach-Object{
 }
 ```
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/BuildLogs.WaekHamze.PNG" style="zoom:50%;" />
 
 ## References
 
-Below is a list of the Azure DevOps REST API operations for **Builds** I find useful:
+Below is a list of the **Azure DevOps REST API** operations for **Builds** I find useful:
 
 | API Definition                                               | Comments                                                     |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
@@ -245,30 +217,20 @@ Below is a list of the Azure DevOps REST API operations for **Builds** I find us
 | [Get Build Changes](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20changes?view=azure-devops-rest-5.1) | Helps identify code changes within a specific build.         |
 | [Get Changes Between Builds](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20changes%20between%20builds?view=azure-devops-rest-5.1) | Helps identify code changes between builds.                  |
 | [Get Build Report](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/report/get?view=azure-devops-rest-5.1) | Helps capture the generated build report in html or json formats. |
-| Get Build Definitions                                        |                                                              |
-| [Get Build Definition Metrics](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/metrics/get%20definition%20metrics?view=azure-devops-rest-5.1) |                                                              |
-| Code                                                         |                                                              |
-| [Fetch Code Search Results](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/status/get?view=azure-devops-rest-5.1) |                                                              |
+| [Get Build Definitions](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/definitions/get?view=azure-devops-rest-6.1) | Find builds related to a particular Pipeline. Helpful to isolate build runs. |
 
-Below is a list of the Azure DevOps REST API operations for **Environments** I find useful:
+Below is a list of the **Azure DevOps REST API** operations for **Environments** I find useful:
 
-| API Definition                                               | Comments                                                    |
-| ------------------------------------------------------------ | ----------------------------------------------------------- |
-| [Builds](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/Builds/Get?view=azure-devops-rest-5.1) | Helps gather build summaries to quickly identify anomalies. |
-| [Get Build Changes](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20changes?view=azure-devops-rest-5.1) | Helps identify code changes within a specific build.        |
-
-Below is a list of the Azure DevOps REST API operations for **Tests** I find useful:
-
-| API Definition                                               | Comments                                                     |
-| ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [Builds](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/Builds/Get?view=azure-devops-rest-5.1) | Helps gather build summaries to quickly identify anomalies.  |
-| [Get Build Logs](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20log?view=azure-devops-rest-5.1) | Helps capture logs for specific builds for troubleshooting and performance monitoring. |
+| API Definition                                               | Comments                                            |
+| ------------------------------------------------------------ | --------------------------------------------------- |
+| [Get Environments](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environments/get?view=azure-devops-rest-6.0) | Get environment identifiers and ownership.          |
+| [Get Environment Deployment Records](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) | Gather previous and current deployment information. |
 
 ## Next Steps
 
-In this article we have worked with Azure DevOps externally. Using the SDK or REST API, Azure DevOps can be explored in detail, allowing us to reimagine how we consume and work with the service.
+In this article we have worked with **Azure DevOps** externally. Using the SDK or REST API, **Azure DevOps** can be explored in detail, allowing us to reimagine how we consume and work with the service.
 
-Previously we looked at setting up notifications and web hooks to popular services. Continuing from here, we will look into more collaboration opportunities. We will review Chat Bots and integrations with Microsoft Teams. For deployment tracking, we will dive into build and release events and opportunities to analyze for greater insights into trends.
+Previously we looked at setting up notifications and web hooks to popular services. Continuing from here, we will look into more collaboration opportunities. We will review Chat Bots and integrations with **Microsoft Teams**. For deployment tracking, we will dive into build and release events and opportunities to analyze for greater insights into trends.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
