added orch rel gif

--- a/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
+++ b/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
@@ -72,7 +72,7 @@ Deployments within a release pipeline allow for numerous ways to integrate monit
 
 Pre and Post approvals can be added to each job in the release pipeline. Adding these can assist during a complex deployment requiring coordination between multiple teams dispersed geographically. Shown below is a hypothetical setup of multiple teams each with specific deliverables as part of a release. 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.Checks.Overview.PNG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/OrchestrateRelease.TeamsChannels.PNG" style="zoom:50%;" />
 
 In this scenario, a core solution needs to be deployed and installed before relying features can begin. When any of the steps in the delivery process begins, the originating team needs to be notified in case of any issues that come up. Using approvals allows the lead of the specific feature team to align the resources and communicate to the broader team that the process can move forward.
 
@@ -97,8 +97,6 @@ Deployment gates provide the ability to run queries on work items within your **
 As mentioned above **Azure Function** is natively integrated within deployment gates for **Release Pipelines**. **<u>These can be used for both a pre condition and post condition to report or integrate with external systems</u>**. 
 
 Deployment gates can also **invoke REST API endpoints**. **<u>This could be used within the Power Platform to query the CDS API or run Power Automate flows.</u>** An example could be to query the **Common Data Service** for running asynchronous jobs, creating activities within a **Dynamics 365** environment or admin actions such as **enabling Admin mode**. Another could be to use the robust approval process built in **Power Automate** for pre and post approvals outside of the **Azure DevOps** licensed user base. 
-
-
 
 ## Using Build Pipelines or Release Pipelines
 
@@ -135,6 +133,16 @@ Each deployment, that meets security checks, will be included within the executi
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.ApprovalCheck.WebHook.PNG" style="zoom:50%;" />
 
 In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the REST API.
+
+## Scenario: Orchestrating a Release
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/OrchestrateRelease.AllUp.PNG" style="zoom:50%;" />
+
+In the above example, we have a multi-stage release pipeline that encompasses multiple teams from development to support to testing. The pipeline relies on multiple artifacts and code branches for importing and testing. 
+
+In this example, we have a core solution containing Dynamics 365 entity changes that are needed by integrations. They will need to lead the deployment and test and notify the subsequent teams that everything has passed and can move on. Below is an example of coordination between the deployment team and the Core team lead.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/OrchestrateRelease.AllUp.PNG" style="zoom:50%;" />
 
 ## Automating Release Notes
 
